--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Open Weather</string>
+    <string name="City">Город</string>
+    <string name="change_city">Change city</string>
+    <string name="my_location">My location</string>
+    <string name="wind">Wind</string>
+    <string name="humidity">Humidity</string>
+    <string name="pressure">Pressure</string>
+    <string name="rain">Rain</string>
 </resources>
